src/objects/User.object
<CustomObject>
    <fields>
        <fullName>By_Pass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By Pass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_1monthfromnow__c</fullName>
        <formula>TODAY()+30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CXE_1monthfromnow</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXE_AccountName__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CXE_AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Auto_Enrolled_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates if there are related services auto enrolled when the user registers on the portal using a SIN related to other services under one account.</description>
        <label>Auto Enrolled Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_CP_isPortalDeactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that will hold the status if the  portal account is set to be deactivated</description>
        <label>isPortalDeactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_ChangePasswordSuccessFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CXE_ChangePasswordSuccessFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_CreatedbyProfileID__c</fullName>
        <formula>CreatedBy.Profile.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CXE_CreatedbyProfileID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_ForgotPasswordFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CXE_ForgotPasswordFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_SelfRegistredUser__c</fullName>
        <formula>$Setup.OrganizationSettings__c.CXE_Meralco_Customer_Community_Profile__c = CreatedBy.Profile.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CXE_SelfRegistredUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_TodayDate__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CXE_TodayDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXE_isPersonAccount__c</fullName>
        <formula>Contact.IsPersonAccount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CXE_isPersonAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Change_Case_Status_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Change Case Status Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Service_ID__c</fullName>
        <label>Initial Service ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_FB_Linked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is FB Linked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Google_Linked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Google Linked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>Office which Meralco employee is attached to</description>
        <inlineHelpText>Office which Meralco employee is attached to</inlineHelpText>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BIZ - Alabang + Cavite + Taguig Zone</fullName>
                </value>
                <value>
                    <fullName>BIZ - Bulacan + Camanava Zone</fullName>
                </value>
                <value>
                    <fullName>BIZ - Laguna + Batangas + Quezon Zone</fullName>
                </value>
                <value>
                    <fullName>BIZ - Makati + Pasig + Rizal Zone</fullName>
                </value>
                <value>
                    <fullName>BIZ - Pasay + Manda + Manila Zone</fullName>
                </value>
                <value>
                    <fullName>BIZ - Quezon City Zone</fullName>
                </value>
                <value>
                    <fullName>Bulacan-Caloocan-Malabon-Navotas-Valenzuela Zone</fullName>
                </value>
                <value>
                    <fullName>CBG - East TS Team</fullName>
                </value>
                <value>
                    <fullName>CBG - North TS Team</fullName>
                </value>
                <value>
                    <fullName>CBG - South TS Team</fullName>
                </value>
                <value>
                    <fullName>CBG - West TS Team</fullName>
                </value>
                <value>
                    <fullName>East Technical Services Team</fullName>
                </value>
                <value>
                    <fullName>HMB - Alabang BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Angono BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Bacoor BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Balagtas BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Balintawak BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Baliwag BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Batangas BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Cainta BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Calamba BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Camarin AUX (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Commonwealth BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Dasmariñas BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - España BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Kalookan AUX (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Kamuning BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Las Piñas BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Lucena BC (CC)</fullName>
                </value>
                <value>
                    <fullName>HMB - Makati BC (CC)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_RO__c</fullName>
        <description>Picklist values are just for testing. Data needed to be migrated</description>
        <label>Parent RO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HMB - South Area</fullName>
                </value>
                <value>
                    <fullName>HMB - North Area</fullName>
                </value>
                <value>
                    <fullName>HMB - Central Area</fullName>
                </value>
                <value>
                    <fullName>BIZ North Area</fullName>
                </value>
                <value>
                    <fullName>BIZ Central Area</fullName>
                </value>
                <value>
                    <fullName>BIZ South Area</fullName>
                </value>
                <value>
                    <fullName>CBG TS Team</fullName>
                    <isActive>false</isActive>
                    <label>CBG TS Team</label>
                </value>
                <value>
                    <fullName>HMB - Alabang BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Alabang BC</label>
                </value>
                <value>
                    <fullName>HMB - Angono BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Angono BC</label>
                </value>
                <value>
                    <fullName>HMB - Bacoor BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Bacoor BC</label>
                </value>
                <value>
                    <fullName>HMB - Balagtas BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Balagtas BC</label>
                </value>
                <value>
                    <fullName>HMB - Balintawak BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Balintawak BC</label>
                </value>
                <value>
                    <fullName>HMB - Baliwag BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Baliwag BC</label>
                </value>
                <value>
                    <fullName>HMB - Batangas BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Batangas BC</label>
                </value>
                <value>
                    <fullName>HMB - Cainta BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Cainta BC</label>
                </value>
                <value>
                    <fullName>HMB - Calamba BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Calamba BC</label>
                </value>
                <value>
                    <fullName>HMB - Camarin AUX</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Camarin AUX</label>
                </value>
                <value>
                    <fullName>HMB - Commonwealth BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Commonwealth BC</label>
                </value>
                <value>
                    <fullName>HMB - Dasmariñas BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Dasmariñas BC</label>
                </value>
                <value>
                    <fullName>HMB - España BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - España BC</label>
                </value>
                <value>
                    <fullName>HMB - Kalookan AUX</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Kalookan AUX</label>
                </value>
                <value>
                    <fullName>HMB - Kamuning BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Kamuning BC</label>
                </value>
                <value>
                    <fullName>HMB - Las Piñas BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Las Piñas BC</label>
                </value>
                <value>
                    <fullName>HMB - Lucena BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Lucena BC</label>
                </value>
                <value>
                    <fullName>HMB - Makati BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Makati BC</label>
                </value>
                <value>
                    <fullName>HMB - Malabon BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Malabon BC</label>
                </value>
                <value>
                    <fullName>HMB - Malate BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Malate BC</label>
                </value>
                <value>
                    <fullName>HMB - Malolos BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Malolos BC</label>
                </value>
                <value>
                    <fullName>HMB - Mandaluyong BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Mandaluyong BC</label>
                </value>
                <value>
                    <fullName>HMB - Marikina BC</fullName>
                    <isActive>false</isActive>
                    <label>HMB - Marikina BC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reset_Password_Link_Generation__c</fullName>
        <label>Reset Password Link Generation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reset_Password_Token__c</fullName>
        <label>Reset Password Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserArticleSelected__c</fullName>
        <description>certain articles related to the reason should be displayed upon selection of reason</description>
        <label>DeactivationReason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>@deprecated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sample__c</fullName>
        <label>Sample</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users - ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsersKnowledge</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>KNOWLEDGE_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users Knowledge</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Users_ACN</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>KNOWLEDGE_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>accenture</value>
        </filters>
        <label>Active Users ACN</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Users_Accenture</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>KNOWLEDGE_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>accenture</value>
        </filters>
        <label>Active Users - Accenture</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Users_Portal</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>IS_FROZEN</columns>
        <columns>Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SALES.CONTACT.NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>Active Users - Portal</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers_RKO</fullName>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>FULL_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Office__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users_RKO</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Custom</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>KNOWLEDGE_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_BY_NAME</field>
            <operation>contains</operation>
            <value>lisen</value>
        </filters>
        <label>Custom</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>None</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>IS_FROZEN</columns>
        <columns>Office__c</columns>
        <filterScope>Everything</filterScope>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Validate_Update_Portal_User</fullName>
        <active>true</active>
        <description>Only System Administrator can update Portal User</description>
        <errorConditionFormula>AND(NOT(ISNEW()),  $User.By_Pass_Validation__c == false, ISPICKVAL( UserType,&quot;CspLitePortal&quot;), $Profile.Name &lt;&gt; &quot;System Administrator&quot;, $Profile.Name &lt;&gt; &quot;Super User 2&quot;)</errorConditionFormula>
        <errorMessage>Only System Administrator can update Portal User</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Create_Portal_User</fullName>
        <active>true</active>
        <description>Validate only RM or System Admin profiles can create External User</description>
        <errorConditionFormula>AND(ISNEW(), $User.By_Pass_Validation__c == false, $Profile.Name &lt;&gt; &quot;System Administrator&quot;, $Profile.Name &lt;&gt; &quot;Super User 2&quot;, $UserRole.Name &lt;&gt; &quot;Biz Partner Manager&quot;, $UserRole.Name &lt;&gt; &quot;Biz Zone Officer&quot;, $UserRole.Name &lt;&gt; &quot;CBG Relationship Manager&quot;)</errorConditionFormula>
        <errorMessage>Only System Administrator or RM Roles can create portal users</errorMessage>
    </validationRules>
</CustomObject>